# 2026-VEDA-Team4

./: .gitignore  Outline.txt  README.md  STYLE.md  log.txt  기획서_초안_2026-VEDA-Team4.docx
CustomerManagementSystem/: .STYLE.md.swp  .gitignore  CMakeLists.txt  databasemanager.cpp  databasemanager.h  item.cpp  item.h  itemadddialog.cpp  itemadddialog.h  itemadddialog.ui  itemdb.cpp  itemdb.h  itemmodifydialog.cpp  itemmodifydialog.h  itemmodifydialog.ui  items.json  itemseed.cpp  itemseed.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypage.cpp  mypage.h  mypage.ui  resources.qrc  shopwidget.cpp  shopwidget.h  shopwidget.ui  signupwidget.cpp  signupwidget.h  signupwidget.ui  style.qss  user.cpp  user.h  userdb.cpp  userdb.h
VEDAMarketSystem/: CMakeLists.txt  databasemanager.cpp  item.h  itemadddialog.cpp  itemdb.cpp  itemdb.h  itemmodifydialog.h  loginwidget.h  loginwidget.ui  mainwindow.h  mypage.cpp  mypage.h  mypage.ui  signupwidget.h  signupwidget.ui  style.qss
VEDAMarketSystem/.qtcreator/: CMakeLists.txt.user.f1392dd
